--- a/menu-api/package.json
+++ b/menu-api/package.json
@@ -1,18 +1,21 @@
 {
   "name": "menu-api",
   "version": "1.0.0",
-  "description": "API for the menu service",
+  "description": "Backend for the mess menu app",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
     "express": "^4.17.1",
-    "mongoose": "^8.9.2"
+    "mongoose": "^5.10.9",
+    "dotenv": "^10.0.0",
+    "cors": "^2.8.5"
   },
   "engines": {
-    "node": "14.x"
-  }
+    "node": "16.x"
+  },
+  "author": "",
+  "license": "ISC"
 }
