--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -30,11 +30,10 @@ android {
 
     signingConfigs {
         release {
-            // Load keystore information from key.properties file
+            def keystorePropertiesFile = rootProject.file("key.properties")
             def keystoreProperties = new Properties()
-            def keystoreFile = rootProject.file("key.properties")
-            if (keystoreFile.exists()) {
-                keystoreProperties.load(new FileInputStream(keystoreFile))
+            if (keystorePropertiesFile.exists()) {
+                keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
                 storeFile file(keystoreProperties['storeFile'])
                 storePassword keystoreProperties['storePassword']
@@ -48,9 +47,8 @@ android {
 
     buildTypes {
         release {
-            // Use the release signing config
             signingConfig signingConfigs.release
-            minifyEnabled false // Enable Proguard for minification if needed
+            minifyEnabled false
             shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
